--- a/raycast-rust-macros/Cargo.toml
+++ b/raycast-rust-macros/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { workspace = true }
-quote = { workspace = true }
-proc-macro2 = { workspace = true }
+syn = { version = "2.0", features = ["full"] }
+quote = "1.0"
+proc-macro2 = "1.0"
 raycast-rust-runtime = { path = "../raycast-rust-runtime" }
